...
        //val drawingInput by viewModel.drawingNameInput.collectAsState()
        var drawingInput by remember {mutableStateOf(viewModel.prevDrawingName.value)}

        TextField(
            value = drawingInput,
            onValueChange = { drawingInput = it },
            label = {Text("Enter a name for your drawing:")}
        )
        Row() {
            OutlinedButton(
                // Use callbacks to determine what to do if there was a problem saving the drawing
                onClick = {
                    drawingInput = viewModel.prevDrawingName.value
...
                Text("Go Back Without Saving")
            }
            Button(
                // Use callbacks to determine what to do if there was a problem saving the drawing
                onClick = { if (viewModel.saveDrawing(drawingInput)) onSuccessfulSave() else onSaveFail() }
            ) {
                Text("Save!")
            }
        }

    }
}

...
